main/default/objects/Workplan_Subtask__c/Workplan_Subtask__c.object-meta.xml
<CustomObject>
    <label>Workplan Subtask</label>
    <nameField>
        <label>Workplan Subtask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workplan Subtasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>