main/default/objects/Workplan_Subtask__c/fields/Duration_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hrs__c</fullName>
    <label>Duration (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>