main/default/objects/Workplan_Subtask__c/fields/Expected_Output__c.field-meta.xml
<CustomField>
    <fullName>Expected_Output__c</fullName>
    <label>Expected Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>