main/default/objects/Workplan_Subtask__c/fields/Next_Workplan_AssignedTo_Email__c.field-meta.xml
<CustomField>
    <fullName>Next_Workplan_AssignedTo_Email__c</fullName>
    <label>Next Workplan AssignedTo Email</label>
    <type>Email</type>
</CustomField>