main/default/objects/Workplan_Subtask__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress - Off-Track</fullName>
            </value>
            <value>
                <fullName>In Progress - At Risk</fullName>
            </value>
            <value>
                <fullName>In Progress - On-Track</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Started</fullName>
                <isActive>false</isActive>
                <label>Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>