main/default/objects/Workplan_Subtask__c/fields/Workplan__c.field-meta.xml
<CustomField>
    <fullName>Workplan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workplan</label>
    <referenceTo>Workplan__c</referenceTo>
    <relationshipLabel>Workplan Subtasks</relationshipLabel>
    <relationshipName>Workplan_Subtasks</relationshipName>
    <type>Lookup</type>
</CustomField>