main/default/objects/Workplan_Subtask__c/fields/Workplan_Task__c.field-meta.xml
<CustomField>
    <fullName>Workplan_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workplan Task</label>
    <referenceTo>Workplan_Item__c</referenceTo>
    <relationshipLabel>Workplan Subtasks</relationshipLabel>
    <relationshipName>Workplan_Subtasks</relationshipName>
    <type>Lookup</type>
</CustomField>